--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.2",
     "gatsby": "^3.2.1",
