--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mkitio/gatsby-theme-password-protect": "^2.1.2",
     "@reach/router": "^1.3.4",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.2",
